--- a/rails_generators/theme/templates/view_layout_administration.html.haml
+++ b/rails_generators/theme/templates/view_layout_administration.html.haml
@@ -2,9 +2,8 @@
 %html{ :lang => "en", :xmlns => "http://www.w3.org/1999/xhtml" }
   %head
     %meta{ :content => "text/html; charset=utf-8", "http-equiv" => "Content-Type" }
-    %title
-      <%= options[:app_name] %>
-      = stylesheet_link_tag "web_app_theme", "web_app_theme_override", "themes/<%= options[:theme] %>/style", :cache => true
+    %title <%= options[:app_name] %>
+    = stylesheet_link_tag "web_app_theme", "web_app_theme_override", "themes/<%= options[:theme] %>/style", :cache => true
   %body
     #container
       #header
