Fixes for the HAML generator and Formtastic forms insertion

--- a/rails_generators/themed/templates/haml/view_sidebar.html.haml
+++ b/rails_generators/themed/templates/haml/view_sidebar.html.haml
@@ -8,9 +8,5 @@
   %h3
     Links
   %ul.navigation
-    %li
-      %a{ :href => "#" }
-        Link 1
-    %li
-      %a{ :href => "#" }
-        Link 2
+    %li= link_to 'Link 1', '#'
+    %li= link_to 'Link 2', '#'
